@@ -19,6 +19,7 @@
 	* Orcs start with sickness potion (from Sporkhack - https://github.com/Bulwersator/CopyOfSporkHack/commit/04a696cc8e12f67cadd6618fafd2d8c2aed4ba51 )
 	* Base bribe is higher for soldiers but no longer based on visible gold, it is now possible to bribe watch, work by "L" (Leon Arnott), slightly modified ( http://l.j-factor.com/nethack/bribe.diff ).
 	* Nazgul scream attack added (from Sporkhack - https://github.com/Bulwersator/CopyOfSporkHack/commit/a47142cd447267a1f5e9b2092c29d51433c060e7 )
+	* Wizards may start with cloak of protection/invisibility/displacement/robe/oilskin cloak/alchemy smock (based on idea from Sporkhack - https://github.com/Bulwersator/CopyOfSporkHack/commit/ef7e3277b9f61d6c9fb96ce9a83e22061d5f487d )
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
